# hermes-dashboard

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  main.rs
backend/src/features/: mod.rs
backend/src/features/auth/: dto.rs  handler.rs  jwt.rs  mod.rs
backend/src/features/config/: dto.rs  handler.rs  repository.rs
backend/src/features/cron/: dto.rs  handler.rs  repository.rs
backend/src/features/sessions/: dto.rs  handler.rs  repository.rs
backend/src/features/stats/: dto.rs  handler.rs  repository.rs
backend/src/features/tools/: dto.rs  handler.rs  repository.rs
backend/src/features/workers/: dto.rs  handler.rs  repository.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/routes/: health.rs  ws.rs
backend/src/shared/: cache.rs  error.rs  mod.rs  validation.rs
docs/: deployment.md  plan.md  security.md  structure.md  workflow.md
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: GatewayControl.svelte  Header.svelte  ModelSwitcher.svelte  SendMessage.svelte  SessionCard.svelte  Sidebar.svelte  StatsCard.svelte  ToolManager.svelte
frontend/src/lib/stores/: auth.ts  status.ts  theme.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/cron/: +page.svelte
scripts/: README.md  deploy-frontend.sh  deploy.sh  hermes-dashboard.service
scripts/nginx/: api-hermes.vinrul.my.id  hermes-dashboard.conf  hermes.vinrul.my.id
(+14 files in other folders)
